<?xml version="1.0"?>
<package format="2">
  <name>kalman_tracking</name>
  <version>0.0.1</version>
  <description>The kalman_tracking package</description>
  <maintainer email="ssosso34@hanyang.ac.kr">doyu</maintainer>
  <license>TODO</license>
  l
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mavros_extras</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_extras</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
